--- a/src/assets/sass/variables/_variables.colors.scss
+++ b/src/assets/sass/variables/_variables.colors.scss
@@ -1,7 +1,7 @@
 $pure-white-color: #FFFFFF !important;
 $pure-black-color: #000000 !important;
 $lighter-black-color: #1D1F23 !important;
-
+$white-color: #FAFAFA !important;
 $transparent-color: transparent !important;
 
 $accented-gray-color: #F4F4F4 !important;
