--- a/src/features/AdditionalPages/NewsPage/News.styles.scss
+++ b/src/features/AdditionalPages/NewsPage/News.styles.scss
@@ -4,16 +4,15 @@
 @use "@assets/sass/variables/_variables.colors.scss" as c;
 
 .newsContainer {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    padding: f.pxToRem(150px) f.pxToRem(200px) f.pxToRem(100px) f.pxToRem(200px);
-    background: c.$pure-white-color;
+    @include mut.sized(100%, 100%);
+    @include mut.rem-padded(150px, 10px, 100px, 10px);
+    background: c.$accented-grayish-gray-color;
+    display: flex;
+    justify-content: center;    
 
     .wrapper{
-        max-width: 100%;
+        max-width: 1200px;
         width: 100%;
-        margin: 0 auto;
         display: block;
 
         .NewsHeader {
@@ -36,16 +35,6 @@
                 @include mut.with-font($font-family: ft.$closer-text-font, $font-weight: 500);
             }
         }
-
-        
-    }
-
-    .newsImageClass {
-        display: none;
-    }
-
-    .newsGoodImageClass {
-        display: none;
     }
 
     .newsGoodImageClass.Full {
@@ -56,67 +45,34 @@
         width: 100%;
     }
 
-    .newsMainTextArea {
-        @include mut.with-font($font-family: ft.$roboto-font, $font-weight: 500, $font-size: 20px);
-        width: 100%;
-        min-width: 50%;
-
-        .newsParagraph {
-            font-family: "Closer Text", sans-serif !important;
-        }
-
-        p {
-            padding-bottom: f.pxToRem(24px);
-        }
-    }
-
-    .newsWithImageWrapper {  
-        min-height: f.pxToRem(500px);
-    }
-
-    .newsWithImageWrapper.Full {
-        flex-wrap: wrap;
-    }
-
     .newsImage {
         margin-bottom: f.pxToRem(20px);
         margin-left: f.pxToRem(20px);
         height: 100%;
         max-height: fit-content;
         min-width:fit-content;
+        max-width: fit-content;
         float: right;
         border-radius: 24px;
     }
 
-    .newsImage.Full {
-        min-width:0%;
-        max-width: 100%;
-        display: none;
-    }
-
-    .newsImage.Full.Show {
-        min-width:0%;
-        max-width: 100%;
-        display: initial;
-    }
-
     .newsLinks {
         @include mut.with-font($font-family: ft.$roboto-font, $font-weight: 500, $font-size: 20px);
+        @include mut.flexed($justify-content:space-between, $align-items:center);
         line-height: f.pxToRem(14px);
         text-align: center;
         text-decoration: underline;
         text-decoration-color: c.$dark-red-color;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
     }
     
-    .newsLinks .Link {
-        color: c.$dark-red-color;
-    }
-
-    .newsLinks .Link.toHide {
-        visibility: hidden;
+    .newsLinks {
+        .Link {
+            color: c.$dark-red-color;
+      
+            &.toHide {
+                visibility: hidden;
+            }
+        }
     }
 
     .randomNewsBlock {
@@ -134,10 +90,8 @@
 
             .randomNewsTitleAndButtn {
                 @include mut.with-font($font-family: ft.$closer-text-font, $font-weight: 500, $font-size: 32px);
+                @include mut.flexed($justify-content: space-between, $align-items: flex-start);
                 color: c.$lighter-black-color;
-                display: flex;
-                justify-content: space-between;
-                align-items: center;
                 
                 .newsButtonContainer {
                     max-height: f.pxToRem(73px);
@@ -148,13 +102,11 @@
                         background: c.$accented-red-color;
                         border-radius: 14px;
                         color: c.$pure-white-color; 
-
                     }
 
                     button:focus {
                         outline: none;
-                    }
-                    
+                    }                                            
                 }
             }
         }
@@ -167,14 +119,9 @@
 
 @media screen and (max-width: 1024px) {
     .newsContainer{
-        background-image: none;
-        padding-left: f.pxToRem(10px);
-        padding-right: f.pxToRem(10px);
-        padding-bottom:  f.pxToRem(20px);
-        padding-top: f.pxToRem(94px);
+        @include mut.rem-padded($bottom: 20px, $top: 94px);
 
         .wrapper {
-
             .NewsHeader {
                 margin-bottom: f.pxToRem(24px) !important;
 
@@ -194,9 +141,7 @@
             }
         }
 
-
         .randomNewsBlock {
-            
             .randomNewsLink {
                 padding: f.pxToRem(40px);
     
@@ -211,7 +156,6 @@
                         button {
                             @include mut.with-font($font-family: ft.$roboto-font, $font-weight: 500, $font-size: 20px);
                         }
-                        
                     }
                 }
             }
@@ -267,11 +211,9 @@
 
                         button {
                             @include mut.with-font($font-size: 14px); 
+                            @include mut.sized($width: 180px, $height: 46px);
                             padding: 0;
-                            width: f.pxToRem(180px);
-                            height: f.pxToRem(46px);
                         }
-                        
                     }
                 }
             }
@@ -289,13 +231,10 @@
             }
 
             .newsLinks {
-                display: flex;
-                flex-wrap:wrap;
-                justify-content: center;
-                text-align: center;
+                @include mut.flexed($justify-content: center, $wrap: wrap);
                 padding-top: 0px;
+                text-align: center;
                 text-decoration: none;
-                text-decoration-color: c.$dark-red-color;
 
                 .Link {
                     @include mut.with-font($font-size: 14px);
@@ -305,7 +244,8 @@
                     border-radius: 10px;
                     width: 100%;
                     margin-bottom: 10px;
-                    filter: drop-shadow(0px 4px 4px rgba(219, 52, 36, 0.18));                }
+                    filter: drop-shadow(0px 4px 4px rgba(219, 52, 36, 0.18));
+                }
             }
 
             .newsLinks .Link.toHide {
@@ -318,6 +258,10 @@
                 .randomNewsLink {
                     padding: 20px;
 
+                    .additionalNewsText {
+                        padding-bottom: f.pxToRem(12px);
+                    }
+
                     .randomNewsTitleAndButtn {
                         display: flex;
                         flex-wrap:wrap;
@@ -328,17 +272,15 @@
                             padding-left: 0px;
 
                             button {
-                                    height: f.pxToRem(46px);
-                                    padding: f.pxToRem(0px)  f.pxToRem(0px);
-                                    min-width: 100%;
-                                    box-shadow: 0px 4px 4px rgba(219, 52, 36, 0.18);
-                                }
+                                height: f.pxToRem(46px);
+                                padding: f.pxToRem(0px)  f.pxToRem(0px);
+                                min-width: 100%;
+                                box-shadow: 0px 4px 4px rgba(219, 52, 36, 0.18);
+                            }
                         }
                     }
                 }
-
             }
         }
     }
 }
-
