--- a/src/features/StreetcodePage/RelatedFiguresBlock/RelatedFigureItem/RelatedFigureItem.styles.scss
+++ b/src/features/StreetcodePage/RelatedFiguresBlock/RelatedFigureItem/RelatedFigureItem.styles.scss
@@ -9,7 +9,7 @@
     @include mut.full-rounded($rad: 30px);
     border: 3px solid c.$pure-white-color;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    background-size: 100%;
+    background-size: 100% 75%;
     background-repeat: no-repeat;
 
     @include mut.positioned-as();
