--- a/src/features/AdditionalPages/SupportUsPage/components/DonationBlock.styles.scss
+++ b/src/features/AdditionalPages/SupportUsPage/components/DonationBlock.styles.scss
@@ -23,16 +23,17 @@
   }
 
    .donateInputContainerWrapper{
+    @include mut.rem-margined($bottom: 35px);
     position: relative;
     display: flex;
     justify-content: center;
+    height: 53px;
     &::before {
       content: '';
       position: absolute;
       bottom: 0;
       width: 100%;
-      border-bottom: 3px solid c.$darkish-gray-color;
-      transform: translateY(-40px);
+      border-bottom: solid c.$darkish-gray-color;
     }
     &.active::before {
       content: none;
@@ -40,7 +41,6 @@
   }
 
   .amountInput {
-    @include mut.rem-margined($bottom: 35px);
     @include mut.with-font(ft.$closer-text-font, $font-size: 40px, $font-weight: 500);
     text-align: right;
     --input-width: 42px;
@@ -60,6 +60,7 @@
   }
 
   .GryvnaSymbol{
+    @include mut.flex-centered();
     width: fit-content;
   }
 
@@ -195,15 +196,12 @@
     }
 
     .donateInputContainerWrapper{
-      &::before {
-        transform: translateY(-24px);
-      }
+      @include mut.rem-margined($bottom: 20px);
+      height: 42px;
     }
     
     .amountInput {
       @include mut.with-font(ft.$closer-text-font, $font-size: 32px, $font-weight: 500);
-      @include mut.rem-margined($bottom: 20px);
-
       display: flex;
       align-items: center;
       height: 42px;
