--- a/src/features/MainPage/Heading/Heading.styles.scss
+++ b/src/features/MainPage/Heading/Heading.styles.scss
@@ -29,4 +29,25 @@
         color: c.$text-red-color;
         cursor: pointer;
     }
+    @media screen and (max-width: 1024px){
+        .leftPart {
+            .blockName {
+                @include mut.with-font($font-family: ft.$closer-text-font, $font-weight: 500, $font-size: 24px);
+                line-height: 40px;
+            }
+        }
+        .headingButton {
+            @include mut.with-font($font-family: ft.$roboto-font, $font-weight: 500, $font-size: 16px);
+            line-height: 18.75px;
+        }
+    }
+
+    @media screen and (max-width: 480px) {
+        @include mut.rem-padded($left: 33px, $right: 33px);
+        .leftPart {
+            .blockName {
+                @include mut.rem-margined($left: 0px);
+            }
+        }
+    }
 }
