changed flat px to fucn

--- a/src/features/AdditionalPages/SupportUsPage/components/DonationBlock.styles.scss
+++ b/src/features/AdditionalPages/SupportUsPage/components/DonationBlock.styles.scss
@@ -43,7 +43,7 @@
   .amountInput {
     @include mut.with-font(ft.$closer-text-font, $font-size: 40px, $font-weight: 500);
     text-align: right;
-    --input-width: 42px;
+    --input-width: f.pxToRem(42px);
     color: c.$darkish-gray-color;
     border: none;
     padding: 0;
@@ -204,7 +204,7 @@
       @include mut.with-font(ft.$closer-text-font, $font-size: 32px, $font-weight: 500);
       display: flex;
       align-items: center;
-      height: 42px;
+      height: f.pxToRem(42px);
       max-width: 100%;
     }
 
