--- a/src/features/StreetcodePage/InterestingFactsBlock/InterestingFactItem/InterestingFactItem.styles.scss
+++ b/src/features/StreetcodePage/InterestingFactsBlock/InterestingFactItem/InterestingFactItem.styles.scss
@@ -14,14 +14,20 @@
   
   background-color: c.$pure-white-color;
   box-shadow: 0 2.62461px 2.62461px rgba(0, 0, 0, .25);
-  
   .slideImage {
+    position: relative;
     @include mut.sized(100%, 250px);
     @include mut.rounded(33px, 33px);
     img{
       width: 100%;
       height: 100%;
       object-fit: cover;
+    }
+    .description-popup{
+      position: absolute;
+      background-color: rgba(0, 0, 0, .15);
+      @include mut.sized(100%, 50px);
+      bottom: 0;
     }
   }
 
