--- a/src/assets/sass/variables/_variables.colors.scss
+++ b/src/assets/sass/variables/_variables.colors.scss
@@ -46,3 +46,6 @@ $light-border-color: #DCDCDC !important;
 $partners-mobile-background-color: #FCFCFC !important;
 $streetcode-background-color:#FCFCFC !important;
 $catalog-background-color: #F5F5F5 !important;
+
+
+$hover-wow-fact-background: rgba(0, 0, 0, 0.5);
