--- a/src/features/StreetcodePage/InterestingFactsBlock/InterestingFactItem/InterestingFactItem.styles.scss
+++ b/src/features/StreetcodePage/InterestingFactsBlock/InterestingFactItem/InterestingFactItem.styles.scss
@@ -26,9 +26,14 @@
     .description-popup{
       visibility: hidden;
       position: absolute;
-      background-color: rgba(0, 0, 0, .15);
-      @include mut.sized(100%, 50px);
+      background-color: c.$hover-wow-fact-background;
+      color: c.$pure-white-color;
+      width:100%;
       bottom: 0;
+      p{
+        @include mut.with-font( $font-family: ft.$roboto-font, $font-weight: 300, $font-size: 10px, $font-style: normal);
+        @include mut.rem-padded(5px, 5px, 5px, 5px);
+      }
     }
     .description-popup-visible, &:hover>.description-popup{
       @if((&:content !=undefined) and (&:content !='')){
