--- a/src/app/layout/header/HeaderDrawer/HeaderDrawerItem/HeaderDrawerItem.styles.scss
+++ b/src/app/layout/header/HeaderDrawer/HeaderDrawerItem/HeaderDrawerItem.styles.scss
@@ -8,6 +8,8 @@
     background-color: transparent;
     border: none;
     text-align: left;
+    color: inherit;
+    text-decoration: none;
 }
 
 .headerItem:hover {    
