created adaptives for team, streedcode sliders

--- a/src/features/MainPage/StreetcodeSlider/StreetcodeSlider.styles.scss
+++ b/src/features/MainPage/StreetcodeSlider/StreetcodeSlider.styles.scss
@@ -41,6 +41,9 @@ $bgImg: '@assets/images/catalog/background.png';
 
     .slick-slide {
         width: unset !important;
+        @media screen and (max-width: 767px) {
+                width: 100% !important;
+            }
     }
 
     .slick-initialized .slick-slide {
@@ -56,6 +59,12 @@ $bgImg: '@assets/images/catalog/background.png';
     .slick-initialized .slick-slide {
         @include mut.flexed($justify-content: center, $gap: 0px);
         @include mut.rem-margined($top: 20px, $right: 0px, $bottom: 10px, $left: 0px);
+    }
+    .slick-center {
+        transform: scale(1.16);
+        padding-left: 16px;
+        padding-right: 16px;
+        padding-bottom: 20px;
     }
 }
 }
