--- a/src/features/MainPage/StreetcodeSlider/StreetcodeSliderItem/StreetcodeSliderItem.styles.scss
+++ b/src/features/MainPage/StreetcodeSlider/StreetcodeSliderItem/StreetcodeSliderItem.styles.scss
@@ -18,6 +18,13 @@
         line-height: f.pxToRem(23px);
         background-color: #FFFFFF;
         margin-left: 20px;
+        @media (min-width: 768px) and (max-width: 1024px) {
+             @include mut.sized(266px, 402px);
+            margin-bottom: 20px;
+        }
+        @media screen and (max-width: 767px) {
+            @include mut.sized(310px, 462px);
+        }
     }
 
     .leftSlider {
@@ -26,14 +33,28 @@
         flex: 0 0 f.pxToRem(294px);
         background-color: #FFFFFF;
         justify-self: flex-start;
+        @media (min-width: 768px) and (max-width: 1024px) {
+            @include mut.sized(266px, 338px);
+        }
+        @media screen and (max-width: 767px) {
+            @include mut.sized(100%, 398px);
+        }
     }
 
     .leftSliderContent {
         background-color: c.$accented-gray-color;
-        @include mut.border(c.$pure-white-color,22px,solid);
+        border:22px solid c.$pure-white-color;
         @include mut.full-rounded(50px);
         @include mut.parent-sized();
         @include mut.flex-centered();
+        @media (min-width: 768px) and (max-width: 1024px) {
+                @include mut.sized(100%, 338px);
+                border-bottom: 0px !important; 
+            }
+        @media screen and (max-width: 767px) {
+                @include mut.sized(100%, 398px);
+                border-bottom: 0px !important;
+            }
     }
 
     .rightSlider {
@@ -43,9 +64,34 @@
         align-self: flex-start;
         width: min-content;
         height: f.pxToRem(360px);
+        max-height: fit-content;
         flex: 1 1 auto;
         position: relative;
+        @media screen and (max-width: 1024px) {
+                height: fit-content;    
+                .textContainer {
+                    height: 100%;
+                    width: 100%;
+                    display: flex;
+                    flex-direction: column;
+                    text-align: center;               
+                }
+            }
     }
+
+
+        .streetcodeAlias {
+            color: #6D6D6D;
+            @include mut.rem-margined(9px, 0px, 0px, 0px);
+            @include mut.with-font($font-weight: 500, $font-size: 20px);
+    
+            @media screen and (max-width: 1024px) {
+                @include mut.rem-margined(0px, 0px, 0px, 0px);
+                color: #1D1F23;
+                @include mut.with-font(ft.$roboto-font, $font-weight: 500, $font-size: 12px);
+                line-height: f.pxToRem(14.06px);
+            }
+        }
 
     .streetcodeLink {
       @include mut.truncated($line-num: 1);
@@ -54,9 +100,17 @@
       bottom: 1px;
       display: flex;
       color: c.$dark-red-color;
-
       &:hover {
           text-decoration: underline;
+      }
+      @media screen and (max-width: 1024px) {
+            @include mut.rem-margined(0px, 0px, 0px, 0px);
+            color: #891F16;
+            @include mut.with-font(ft.$roboto-font, $font-weight: 500, $font-size: 12px);
+            line-height: f.pxToRem(14.06px);
+            width: 100%;
+            position:unset;
+            text-decoration: underline;
       }
   }
 
@@ -65,14 +119,21 @@
         @include mut.with-font(ft.$closer-text-font, $font-weight: 500, $font-size: 34px);
         color: #1D1F23;
         line-height: f.pxToRem(40px);
+        
     }
 
     .streetcodeMainPageContainer {
         box-sizing: border-box;
         width: 100%;
         height: 100%;
-        @include mut.flexed(column, start, space-between, nowrap);
+         @include mut.flexed(column, start, space-around, nowrap);
+        display: flex;
+       
+
         @include mut.rem-padded(28px, 0px, 0px, 0px);
+        @media screen and (max-width: 1024px) {
+                @include mut.rem-padded(6px, 0px, 0px, 0px);
+        }
     }
   
     .streetcodeTeaser {
@@ -88,17 +149,25 @@
         &::-webkit-scrollbar {
             display: none;
         }
+        @media screen and (max-width: 1024px) {
+            flex-direction: column;
+            text-align: center;
+        }
     }
 
-    .streetcodeAlias {
-        color: #6D6D6D;
-        @include mut.rem-margined(9px, 0px, 0px, 0px);
-        @include mut.with-font($font-weight: 500, $font-size: 20px);
-    }
+    
 
 
     .StreetcodeMainPageImg {
         margin: auto;
         @include mut.sized(225px, 307px);
+        @media (min-width: 768px) and (max-width: 1024px) {
+            @include mut.sized(200px, 261px);
+            object-fit: cover;
+        }
+        @media screen and (max-width: 767px) {
+            @include mut.sized(240px, 312px);
+            object-fit: cover;
+        }
     }
 }
