--- a/src/features/AdditionalPages/SupportUsPage/SupportUs.styles.scss
+++ b/src/features/AdditionalPages/SupportUsPage/SupportUs.styles.scss
@@ -383,13 +383,13 @@
 
 .CoppyMessage {
     position: fixed;
-    height: 40px;    
-    bottom: -40px;
-    left: 20px;
+    height: f.pxToRem(40px);    
+    bottom: f.pxToRem(-40px);
+    left: f.pxToRem(20px);
     background-color: rgba(0, 0, 0, 0.788);
     color: #fff;
-    padding: 10px;
-    border-radius: 4px;
+    padding: f.pxToRem(10px);
+    border-radius: f.pxToRem(4px);
     animation-name: slideAndReturn;
     animation-duration: 2s;
     animation-iteration-count: calc(1);
@@ -397,18 +397,18 @@
 
 @keyframes slideAndReturn {
     0% {
-        transform: translateY(0px);
+        transform: translateY(f.pxToRem(0px));
     }
 
     10% {
-        transform: translateY(-60px);
+        transform: translateY(f.pxToRem(-60px));
     }
 
     90% {
-        transform: translateY(-60px);
+        transform: translateY(f.pxToRem(-60px));
     }
 
     100% {
-        transform: translateY(0);
+        transform: translateY(f.pxToRem(0));
     }
 }
